<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollviewlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp" >

        <EditText
            android:id="@+id/namecustomer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="#333"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@style/headerText"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/twhipped"
            style="@style/toppingsText"
            android:text="@string/whipped" />

        <CheckBox
            android:id="@+id/tchocolate"
            style="@style/toppingsText"
            android:text="@string/chocolate" />

        <TextView
            style="@style/headerText"
            android:text="@string/quantity" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/minus"
                style="@style/Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:onClick="decrement"
                android:text="@string/minus"
                app:backgroundTint="#666" />

            <TextView
                android:id="@+id/value_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/minus"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/value_quantity"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@+id/value_quantity"
                android:onClick="increment"
                android:text="@string/plus"
                app:backgroundTint="#666" />

        </RelativeLayout>

        <TextView
            style="@style/headerText"
            android:text="@string/orderSummary" />

        <TextView
            android:id="@+id/order_summary_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            app:backgroundTint="#666" />

    </LinearLayout>

</ScrollView> <!-- Add the scrollbar in the app -->
